2003-01-17  Bill Bumgarner  <bbum@codefab.com>
    * Lib/objc/_convenience.py (enumeratorGenerator): Busted by the language police!

2003-01-16  Bill Bumgarner  <bbum@codefab.com>
    * Lib/objc/_convenience.py: Fixed enumeratorGenerator() to test
      nextObject against None.  This fixes a bug where an empty string in an
      array would terminate enumeration even if there were objects after the
      empty string.

2003-01-14  Bill Bumgarner  <bbum@codefab.com>
    * Lib/AppKit/__init__.py (NSApplicationDelegate): Added
      NSApplicationDelegate definitions.
    * Modules/Cocoa/_AppKit.m (objc_NSApplicationMain): Evil hack to fix bug
      in NSApplicationMain()'s lack of argument processing.  Evil Evil hack,
      but it works.

2003-01-13  Bill Bumgarner  <bbum@codefab.com>
    * Lib/objc/_convenience.py: Added support for NSEnumerator [for x in
      enum:] and cleaned up other convenience methods.

2003-01-11  Bill Bumgarner  <bbum@codefab.com>
    * setup.py (req_ver): Moved back to non-ffi build (I believe the move to
      ffi was an unintentional change?).
    * Modules/Cocoa/_AppKit.m: Added bridging of NSRectFillList.  API should
      be in GNUstep?
    (objc_NSRectFillList): Fixed short-circuit where rectCount is 0.

2002-01-11 Ronald Oussoren <oussoren@cistron.nl>
    * Add workaround for a feature of NSData: 
    	x = NSData.alloc()
	    y = x.initWithBytes_len_(foo, bar)
      The initWithBytes_len_ call above acts like realloc(): 'x' might no
      longer be a pointer to a valid object. 

2002-01-06 Ronald Oussoren <oussoren@cistron.nl>
    * Merged the second halve of Mirko's patch: Changes to Modules/Cocoa
    * I've done some updates to make ensure that there are no patches to
      generated files.

2003-01-06  Bill Bumgarner  <bbum@codefab.com>
    * Doc/coding-style.txt: Added more information about ReST.  Some cleanup.
    * Modules/objc/module.m: Added convenience function to allocate a buffer