@@ -40,50 +40,3 @@ if 'PYOBJCFRAMEWORKS' in os.environ:
         if initPath:
             execfile(initPath, globals(), locals())
 
-from types import *
-def propertyListFromPythonCollection(aPyCollection, conversionHelper=None):
-    containerType = type(aPyCollection)
-    if containerType == DictType:
-        collection = NSMutableDictionary.dictionary()
-        for aKey in aPyCollection:
-            convertedValue = propertyListFromPythonCollection( aPyCollection[aKey], conversionHelper=conversionHelper )
-            collection.setObject_forKey_( convertedValue , aKey )
-        return collection
-    elif containerType in [TupleType, ListType]:
-        collection = NSMutableArray.array()
-        for aValue in aPyCollection:
-            convertedValue = propertyListFromPythonCollection( aValue, conversionHelper=conversionHelper )
-            collection.addObject_( convertedValue  )
-        return collection
-    elif containerType in StringTypes:
-        return aPyCollection # bridge will convert to NSString
-    elif containerType == IntType:
-        return NSNumber.numberWithInt_( aPyCollection )
-    elif containerType == LongType:
-        return NSNumber.numberWithLong_( aPyCollection )
-    elif containerType == FloatType:
-        return NSNumber.numberWithFloat_( aPyCollection )
-    elif containerType == NoneType:
-        return NSNull.null()
-    else:
-        if conversionHelper:
-            return conversionHelper(aPyCollection)
-        raise "UnrecognizedTypeException", "Type %s encountered in python collection;  don't know how to convert." % containerType
-
-def pythonCollectionFromPropertyList(aCollection, conversionHelper=None):
-    if isinstance(aCollection, NSDictionary):
-        pyCollection = {}
-        for k in aCollection:
-            pyCollection[k] = pythonCollectionFromPropertyList(aCollection[k], conversionHelper)
-        return pyCollection
-    elif isinstance(aCollection, NSArray):
-        pyCollection = [None] * len(aCollection)
-        for i in range(len(aCollection)):
-            pyCollection[i] = pythonCollectionFromPropertyList(aCollection[i], conversionHelper)
-        return pyCollection
-    elif type(aCollection) in StringTypes:
-        return aCollection
-    else:
-        if conversionHelper:
-            return conversionHelper(aCollection)
-        raise "UnrecognizedTypeException", "Type %s encountered in ObjC collection;  don't know how to convert." % type(aCollection)
